# dictum

./: Cargo.toml  README.md  build.rs
.beads/: issues.jsonl
.dictum/: .gitignore  config.toml  dictum.jsonl
.github/workflows/: ci.yml
docs/: team-workflows-analysis.md
skills/: claude.md
src/: config.rs  error.rs  id.rs  main.rs
src/assets/: report.html
src/cli/: add.rs  amend.rs  context.rs  init.rs  io.rs  link.rs  list.rs  mod.rs  query.rs  report.rs  show.rs
src/db/: decisions.rs  labels.rs  links.rs  mod.rs  schema.rs  store.rs
src/db/grafeo/: mod.rs
src/db/sqlite/: decisions.rs  links.rs  mod.rs
src/format/: json.rs  mod.rs  text.rs  tree.rs
src/model/: decision.rs  link.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
