[package]
name = "dictum"
version = "0.1.0"
edition = "2021"

[features]
default = ["grafeo"]
sqlite = ["dep:rusqlite"]
grafeo = ["dep:grafeo"]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
grafeo = { version = "0.5", optional = true, default-features = false, features = ["gql", "grafeo-file", "text-index"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
thiserror = "2"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
